# pyO3_202

./: .gitignore  Cargo.toml  README.md  pyproject.toml
ex_1/: pyburger-1.py  pyburger.py  pyburger.rs  try-0.py  try.py
ex_1/src/: lib.rs
ex_2/pytests/: test.rs
ex_2/src/: lib.rs
ex_3/: pyburger.rs
ex_3/src/: lib.rs
ex_4/: lib-0.rs  pyburger.rs  try-0.py  try.py
ex_4/src/: lib.rs
ex_5/src/: lib.rs
src/: lib.rs
