[package]
name = "py202"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py202"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.23"

[[test]]
name = "test_py202"
path = "pytests/test.rs"
harness = false